# hs-notmuch

./: .gitignore  .travis.yml  Main.hs  README.rst  cabal.haskell-ci  ghc-notmuch.spec  github.patch  notmuch.cabal
.github/workflows/: haskell-ci.yml
cbits/: wrap_talloc.c
src/: Notmuch.hs
src/Notmuch/: Binding.chs  Search.hs  Tag.hs  Talloc.chs  Util.hs
src/Notmuch/Binding/: Constants.chs
tools/: DbInfo.hs  Files.hs  IndexFile.hs  TagCount.hs  TagMessage.hs  TagSet.hs
