cabal-version:       2.2
name:                notmuch
version:             0.3.1.1
synopsis:            Haskell binding to Notmuch, the mail indexer
description:
  Binding to the notmuch mail indexer, providing a hopefully
  somewhat typesafe way to search your email.
license:             GPL-3.0-or-later
license-file:        gpl-3.0.txt
extra-source-files:
  README.rst
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2014-2018  Fraser Tweedale
category:            FFI
build-type:          Simple
tested-with:
  GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

homepage:            https://github.com/purebred-mua/hs-notmuch
bug-reports:         https://github.com/purebred-mua/hs-notmuch/issues
source-repository head
  type: git
  location: https://github.com/purebred-mua/hs-notmuch.git

flag demos
  description: Build demonstration programs
  default:     False

common common
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=missing-methods
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:
      -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:
      -Winvalid-haddock
      -Werror=unicode-bidirectional-format-characters
  if impl(ghc >= 9.2)
    ghc-options:
      -Wimplicit-lift
      -Woperator-whitespace
      -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options:
      -Wredundant-strictness-flags

  build-depends:
    base >= 4.13 && < 5
    , mtl >= 2 && < 3

library
  import: common

  exposed-modules:
    Notmuch
    Notmuch.Util

  other-modules:
    Notmuch.Binding
    Notmuch.Binding.Constants
    Notmuch.Search
    Notmuch.Tag
    Notmuch.Talloc

  build-depends:
    , bytestring >= 0.10 && < 0.13
    , deepseq >= 1.4
    , filepath >= 1.0
    , profunctors >= 5 && < 6
    , tagged >= 0.8 && < 1
    , time
    , text

  build-tool-depends:
    c2hs:c2hs >= 0.19.1

  extra-libraries:
    notmuch
    , talloc

  hs-source-dirs:      src

executable hs-notmuch-files
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: Files.hs
  build-depends:
    , notmuch

executable hs-notmuch-dbinfo
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: DbInfo.hs
  build-depends:
    , notmuch

executable hs-notmuch-tag-message
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: TagMessage.hs
  build-depends:
    , bytestring
    , notmuch

executable hs-notmuch-tag-count
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: TagCount.hs
  build-depends:
    , containers
    , notmuch

executable hs-notmuch-tag-set
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: TagSet.hs
  build-depends:
    , notmuch

executable hs-notmuch-index-file
  import: common
  if !flag(demos)
    buildable: False
  hs-source-dirs: tools
  main-is: IndexFile.hs
  build-depends:
    , notmuch
